add logo compoenent

--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -1,1 +1,5 @@
 @import "./../styles/settings";
+@import "./../styles/logo.scss";
+
+//navbar styles
+@import "./../styles/navbars/landing-navbar.scss";
