--- a/src/styles/_settings.scss
+++ b/src/styles/_settings.scss
@@ -8,6 +8,8 @@ $light : #fff;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    list-style: none;
+    text-decoration: none;
 }
 
 //mixins =>
