--- a/src/styles/_settings.scss
+++ b/src/styles/_settings.scss
@@ -10,6 +10,7 @@ $light : #fff;
     box-sizing: border-box;
     list-style: none;
     text-decoration: none;
+    font-family: "Sora", sans-serif
 }
 
 //mixins =>
@@ -17,4 +18,47 @@ $light : #fff;
 @mixin container {
     padding-left: 8%;
     padding-right: 8%;
+}
+
+//responsive
+@mixin screen($breakpoint) {
+    @if $breakpoint==small {
+        @media (max-width: 767px) {
+            @content;
+        }
+    }
+
+    @else if $breakpoint==medium {
+        @media (min-width: 768px) and (max-width: 1023px) {
+            @content;
+        }
+    }
+
+    @else if $breakpoint==large {
+        @media (min-width: 1024px) {
+            @content;
+        }
+    }
+}
+
+@mixin screen-x($min, $max) {
+    @media screen and (min-width: $min) and (max-width: $max) {
+        @content;
+    }
+}
+
+li,
+ul,
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    margin-bottom: 0 !important;
+}
+
+button {
+    font-size: 15px !important;
 }
