--- a/src/styles/navbars/landing-navbar.scss
+++ b/src/styles/navbars/landing-navbar.scss
@@ -23,6 +23,20 @@
                 li {
                     font-size: 15px;
                     color: $green02;
+                    position: relative;
+                    cursor: pointer;
+                    transition: 0.7s ease-in-out;
+
+                    &:hover::after {
+                        content: "";
+                        width: 100%;
+                        height: 1px;
+                        background-color: $green02;
+                        position: absolute;
+                        left: 0;
+                        bottom: 0;
+                        transition: 0.7s ease-in-out;
+                    }
                 }
             }
         }
