--- a/src/styles/_settings.scss
+++ b/src/styles/_settings.scss
@@ -1,6 +1,7 @@
 //variables
 $green01 : #22C55E;
 $green02 : #121212;
+$green03: rgba(14, 14, 14, 0.81);
 $light : #fff;
 $radius01 : 50px;
 $radius02 : 20px;
