--- a/src/styles/sections/landing/landing-hero.scss
+++ b/src/styles/sections/landing/landing-hero.scss
@@ -12,6 +12,7 @@
         flex-direction: column;
         align-items: center;
         margin-top: 16vh;
+        gap: 4vh;
 
         h1 {
             font-size: 46px;
@@ -60,6 +61,7 @@
         bottom: 0;
         left: 0;
         width: 100%;
+        margin-top: -5vh;
 
         img {
             width: 100%;
