add about-card component

--- a/src/styles/_settings.scss
+++ b/src/styles/_settings.scss
@@ -3,6 +3,7 @@ $green01 : #22C55E;
 $green02 : #121212;
 $green03: rgba(14, 14, 14, 0.81);
 $light : #fff;
+$gray01 : #3E3D4D;
 $radius01 : 50px;
 $radius02 : 20px;
 
