add image to features-landing

--- a/src/styles/landing.scss
+++ b/src/styles/landing.scss
@@ -1,2 +1,3 @@
 @import "./sections/landing/landing-hero.scss";
 @import "./sections/landing/landing-about.scss";
+@import "./sections/landing/landing-features.scss";
