add content to features-landing

--- a/src/styles/sections/landing/landing-features.scss
+++ b/src/styles/sections/landing/landing-features.scss
@@ -2,4 +2,9 @@
     width: 100%;
     overflow: hidden;
     margin-top: 4rem;
+    @include container;
+
+    .features-content{
+        
+    }
 }
