--- a/src/styles/sections/landing/landing-features.scss
+++ b/src/styles/sections/landing/landing-features.scss
@@ -5,9 +5,19 @@
     @include container;
 
     .features-content {
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+
         .title h2 {
             color: $green02;
             font-weight: 600;
+        }
+
+        .features-points {
+            display: flex;
+            flex-direction: column;
         }
     }
 }
