--- a/src/styles/sections/landing/landing-features.scss
+++ b/src/styles/sections/landing/landing-features.scss
@@ -18,6 +18,7 @@
         .features-points {
             display: flex;
             flex-direction: column;
+            gap: 4vh;
         }
     }
 }
