--- a/src/styles/sections/landing/landing-about.scss
+++ b/src/styles/sections/landing/landing-about.scss
@@ -1,7 +1,7 @@
 .landing__about {
     width: 100%;
     overflow: hidden;
-    margin-top: 4rem;
+    margin-top: 8vh;
     display: flex;
     flex-direction: column;
     gap: 8vh;
