--- a/src/styles/sections/landing/landing-features.scss
+++ b/src/styles/sections/landing/landing-features.scss
@@ -1,7 +1,7 @@
 .landing-features {
     width: 100%;
     overflow: hidden;
-    margin-top: 4rem;
+    margin-top: 15vh;
     @include container;
 
     .features-content {
