add header to landing-community

--- a/src/styles/landing.scss
+++ b/src/styles/landing.scss
@@ -1,3 +1,4 @@
 @import "./sections/landing/landing-hero.scss";
 @import "./sections/landing/landing-about.scss";
 @import "./sections/landing/landing-features.scss";
+@import "./sections/landing/landing-community.scss";
