fix feature-image width

--- a/src/styles/sections/landing/landing-community.scss
+++ b/src/styles/sections/landing/landing-community.scss
@@ -38,6 +38,10 @@
                 border-radius: $radius01;
                 padding: 11px 15px;
                 font-size: 14px;
+
+                &:focus {
+                    outline: 2px solid $green02;
+                }
             }
 
             .btn {
