--- a/src/styles/sections/landing/landing-features.scss
+++ b/src/styles/sections/landing/landing-features.scss
@@ -23,8 +23,11 @@
         }
     }
 
-    .features-image img {
+    .features-image {
         width: 100%;
-        object-fit: cover;
+
+        img {
+            object-fit: cover;
+        }
     }
 }
