--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -3,6 +3,7 @@
 
 //navbar styles
 @import "./../styles/navbars/landing-navbar.scss";
+@import "./../styles/navbars/landing-navbar-responsive.scss";
 
 //landing styles
 @import "./../styles/landing.scss";
