--- a/src/styles/earth/earth.scss
+++ b/src/styles/earth/earth.scss
@@ -7,7 +7,7 @@
 
     &__shadow {
         width: 300px;
-        height: .300px;
+        height: 300px;
         position: absolute;
         box-shadow: inset -5px 0 30px 5px #000;
         border-radius: 50%;
