--- a/src/styles/navbars/landing-navbar.scss
+++ b/src/styles/navbars/landing-navbar.scss
@@ -9,6 +9,10 @@
     z-index: 1000;
     top: 0;
 
+    @include screen(small) {
+        position: fixed;
+    }
+
     &__container {
         height: 100%;
         display: flex;
