--- a/src/styles/sections/landing/landing-community.scss
+++ b/src/styles/sections/landing/landing-community.scss
@@ -1,8 +1,11 @@
 .landing__community {
     margin-top: 13vh;
     background-image: url("/community-bg.png");
-    padding: 30vh 12%;
-    background-size: contain;
+    background-repeat: no-repeat;
+    padding: 28vh 12%;
+    position: relative;
+    background-size: 100% 100%;
+    z-index: 500;
 
     .community-header {
         display: flex;
