--- a/src/styles/navbars/landing-navbar.scss
+++ b/src/styles/navbars/landing-navbar.scss
@@ -6,11 +6,12 @@
     background-color: $green01;
     padding-top: 16px;
     padding-bottom: 16px;
-    z-index: 1000;
+    z-index: 1200;
     top: 0;
 
     @include screen(small) {
         position: fixed;
+        box-shadow: 7px 0 10px rgba(0, 0, 0, 0.295);
     }
 
     &__container {
