--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -4,6 +4,7 @@
 //navbar styles
 @import "./../styles/navbars/landing-navbar.scss";
 @import "./../styles/navbars/landing-navbar-responsive.scss";
+@import "./../styles/navbars/overlay.scss";
 
 //landing styles
 @import "./../styles/landing.scss";
