--- a/src/styles/navbars/landing-navbar-responsive.scss
+++ b/src/styles/navbars/landing-navbar-responsive.scss
@@ -5,6 +5,10 @@
     width: 100%;
     overflow: hidden;
 
+    @include screen(small) {
+        margin-top: 4.8rem;
+    }
+
     ul {
         display: flex;
         align-items: center;
