--- a/src/styles/cards/landing-card.scss
+++ b/src/styles/cards/landing-card.scss
@@ -1,8 +1,12 @@
 .about-card {
     display: flex;
     flex-direction: column;
-    height: 12.5rem;
     align-items: center;
+
+    @include screen(small) {
+        height: max-content !important;
+        gap: 17px;
+    }
 
     .icon {
         flex-grow: 1;
@@ -14,6 +18,10 @@
         gap: 11px;
         align-items: center;
 
+        @include screen(small) {
+            gap: 15px;
+        }
+
         h5 {
             font-size: 20px;
             color: $green02;
@@ -21,6 +29,10 @@
 
         p {
             color: $gray01;
+
+            @include screen(small) {
+                width: 100% !important;
+            }
         }
     }
 }
