--- a/src/styles/earth/earth.scss
+++ b/src/styles/earth/earth.scss
@@ -5,6 +5,11 @@
     overflow: hidden;
     border-radius: 50%;
 
+    @include screen(small) {
+        width: 250px;
+        height: 250px;
+    }
+
     &__shadow {
         width: 300px;
         height: 300px;
@@ -12,6 +17,11 @@
         box-shadow: inset -5px 0 30px 5px #000;
         border-radius: 50%;
         overflow: hidden;
+
+        @include screen(small) {
+            width: 250px;
+            height: 250px;
+        }
     }
 
     img {
