--- a/src/styles/sections/landing/landing-community.scss
+++ b/src/styles/sections/landing/landing-community.scss
@@ -13,7 +13,12 @@
         @include container;
     }
 
-
+    @include screen(medium) {
+        background-size: cover;
+        padding: 12rem 0;
+        margin-top: 3rem;
+        @include container;
+    }
 
     .community-header {
         display: flex;
@@ -27,6 +32,10 @@
         h1 {
             font-weight: 600;
             color: $green02;
+
+            @include screen(medium){
+                font-size: 35px;
+            }
         }
     }
 
