--- a/src/styles/sections/landing/landing-features.scss
+++ b/src/styles/sections/landing/landing-features.scss
@@ -4,12 +4,21 @@
     margin-top: 15vh;
     @include container;
 
+
+    @include screen(medium) {
+        margin-top: 4rem;
+    }
+
     .features-content {
         height: 100%;
         display: flex;
         flex-direction: column;
         justify-content: center;
         gap: 5vh;
+
+        @include screen(medium) {
+            gap: 2rem;
+        }
 
         .title h2 {
             color: $green02;
@@ -25,6 +34,9 @@
 
     .features-image {
         width: 100%;
+        height: 100%;
+        display: flex;
+        align-items: center;
 
         img {
             object-fit: cover;
@@ -33,10 +45,8 @@
                 width: 100%;
             }
 
-            img {
-                @include screen(small) {
-                    width: 100%;
-                }
+            @include screen(medium) {
+                width: 100%;
             }
         }
     }
