add trandlation-opt to navbar

--- a/src/styles/navbars/landing-navbar.scss
+++ b/src/styles/navbars/landing-navbar.scss
@@ -52,6 +52,15 @@
                         transition: 0.7s ease-in-out;
                     }
                 }
+
+                #translation-option {
+                    display: flex;
+                    align-items: center;
+
+                    img {
+                        width: 16px;
+                    }
+                }
             }
         }
 
