--- a/src/styles/navbars/landing-navbar.scss
+++ b/src/styles/navbars/landing-navbar.scss
@@ -56,6 +56,14 @@
                     display: flex;
                     flex-direction: column;
 
+                    &:hover::after {
+                        content: "";
+                        content: "";
+                        width: 100%;
+                        height: 1px;
+                        background-color: $green01;
+                    }
+
                     .item {
                         img {
                             width: 16px;
@@ -64,11 +72,27 @@
 
                     .window-toogle {
                         position: absolute;
-                        margin-top: 25px;
-                        width: 55px;
-                        height: 55px;
+                        margin-top: 30px;
+                        width: max-content;
+                        height: max-content;
+                        padding: 13px;
                         background-color: #fff;
                         border-radius: 5px;
+                        display: flex;
+                        flex-direction: column;
+                        gap: 12px;
+
+                        p {
+                            color: $green02;
+                            padding: 6px;
+                            font-size: 14px;
+
+                            &:hover {
+                                background-color: $green01;
+                                border-radius: 5px;
+                                color: $light;
+                            }
+                        }
                     }
                 }
             }
