--- a/src/styles/navbars/landing-navbar.scss
+++ b/src/styles/navbars/landing-navbar.scss
@@ -65,8 +65,13 @@
                     }
 
                     .item {
+                        display: flex;
+                        gap: 5px;
+                        align-items: center;
+
                         img {
                             width: 16px;
+                            height: 16px;
                         }
                     }
 
