--- a/src/styles/navbars/landing-navbar-responsive.scss
+++ b/src/styles/navbars/landing-navbar-responsive.scss
@@ -36,6 +36,54 @@
             }
         }
 
+        #translation-option {
+            display: flex;
+            flex-direction: column;
+
+            &:hover::after {
+                content: "";
+                content: "";
+                width: 100%;
+                height: 1px;
+                background-color: #fff;
+            }
+
+            .item {
+                display: flex;
+                gap: 5px;
+                align-items: center;
+
+                img {
+                    width: 16px;
+                    height: 16px;
+                }
+            }
+
+            .window-toogle {
+                margin-top: 10px;
+                width: max-content;
+                height: max-content;
+                padding: 13px;
+                background-color: #fff;
+                border-radius: 5px;
+                display: flex;
+                flex-direction: column;
+                gap: 17px;
+
+                p {
+                    color: $green02;
+                    padding: 6px;
+                    font-size: 14px;
+
+                    &:hover {
+                        background-color: $green01;
+                        border-radius: 5px;
+                        color: $light;
+                    }
+                }
+            }
+        }
+
         .button .btn {
             padding: 8px 16px;
             height: 100%;
