--- a/src/styles/sections/landing/landing-hero.scss
+++ b/src/styles/sections/landing/landing-hero.scss
@@ -32,7 +32,7 @@
         h1 {
             font-size: 46px;
             font-weight: 700;
-            color: $green02;
+            color: $light;
             text-align: center;
 
             @include screen(medium) {
